corrections to plans

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -115,3 +115,22 @@
         border-color: #556ee6;
     }
 }
+.brand-light {
+    background-color: #FFF2E1 !important;
+    border-color: #FFF2E1;
+}
+
+.brand-soft {
+    background-color: #F89C1D !important;
+    border-color: #F89C1D;
+}
+
+.brand-primary {
+    background-color: #CC4516 !important;
+    border-color: #CC4516;
+}
+
+.brand-secondary {
+    background-color: #761300 !important;
+    border-color: #761300;
+}
