--- a/src/assets/scss/custom/pages/_authentication.scss
+++ b/src/assets/scss/custom/pages/_authentication.scss
@@ -11,7 +11,8 @@
 }
 
 .authentication-bg{
-    background-color: $auth-bg;
+    // background-color: $auth-bg;
+    background-color: #FFF2E1;
     .auth-logo{
         .logo{
             margin: 0px auto;
