--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -77,7 +77,7 @@
         line-height: 28px !important;
         font-size: 20px !important;
         border-radius: 50% !important;
-        background-color: rgba($primary, 0.25) !important;
+        background-color: #CC4516 !important;
         color: $primary !important;
         margin: 4px 8px !important;
         border: none;
